metadata/force-app/main/default/objects/Partner_Commission__c/Partner_Commission__c.object-meta.xml
<CustomObject>
    <label>Partner Commission</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Partner Commission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Commissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>