metadata/force-app/main/default/objects/Partner_Commission__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <label>Commission Amount</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>