metadata/force-app/main/default/objects/Partner_Commission__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Partner Commissions</relationshipLabel>
    <relationshipName>Partner_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>