metadata/force-app/main/default/objects/Partner_Commission__c/fields/Order_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Payment_Status__c</fullName>
    <label>Order Payment Status</label>
    <length>55</length>
    <type>Text</type>
</CustomField>