metadata/force-app/main/default/objects/Partner_Commission__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Commissions</relationshipLabel>
    <relationshipName>Partner_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>