metadata/force-app/main/default/objects/Partner_Commission__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid In Full</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Fully Applied</fullName>
                <default>true</default>
                <label>Fully Applied</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>